--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     const usernameElement = document.querySelector('#username');
     const avatarElement = document.querySelector('#avatar');
     const reposElement = document.querySelector('#repos');
-    const followersElement = document.querySelector('#folowers');
+    const followersElement = document.querySelector('#followers');
     const followingElement = document.querySelector('#following');
     const linkElement = document.querySelector('#link');
 
@@ -48,7 +48,7 @@
     .then(function(json){
         nameElement.innerText = json.name;
         usernameElement.innerText = json.login;
-        avatarElement.src = json.avatr_url;
+        avatarElement.src = json.avatar_url;
         followingElement.innerText = json.following;
         followersElement.innerText = json.followers;
         reposElement.innerText = json.public_repos;
